--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     </head>
 
     <body>
-        <h1>hi!</h1>
+        <div class="top">
+            <h1>hi</h1>
+        </div>
+
+        <div class="bottom">
+            <h1>bottom</h1>
+        </div>
     </body>
 </html>
