--- a/index.html
+++ b/index.html
@@ -4,18 +4,77 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Web site created for ECE461L Homework 5"/>
-        <title>Website!</title>
+        <meta name="description" content="My Personal Website"/>
+        <title>Sarah Dickerson</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
 
     <body>
-        <div class="top">
-            <h1>hi</h1>
+        <div class="fullscreen-container home">
+            <h1>hi, my name is sarah!</h1>
         </div>
+        <div class="fullscreen-container">
+            <div class="container-column">
+                <h1>about me</h1>
 
-        <div class="bottom">
-            <h1>bottom</h1>
+                <div class="container-row">
+                    <!-- Code IDE console -->
+                    <div id="console">
+                        <span class="first-color">class</span>
+                        <span class="second-color"> SarahDickerson</span><span class="regular-color">:</span>
+                        <br>
+                        <ul>
+                            <span class="first-color">def</span>
+                            <span class="third-color">__init__</span>
+                            <span class="sixth-color">(</span><span class="fourth-color">self</span><span class="sixth-color">)</span><span class="regular-color">:</span>
+                            <br>
+                            <ul>
+                                <span class="second-color">self</span><span class="regular-color">.</span><span class="fourth-color">full_name</span>
+                                <span class="third-color">=</span>
+                                <span class="fifth-color">"Sarah Dickerson"</span>
+                                <br>
+
+                                <span class="second-color">self</span><span class="regular-color">.</span><span class="fourth-color">school</span>
+                                <span class="third-color">=</span>
+                                <span class="fifth-color">"The University of Texas at Austin"</span>
+                                <br>
+
+                                <span class="second-color">self</span><span class="regular-color">.</span><span class="fourth-color">expected_graduation</span>
+                                <span class="third-color">=</span>
+                                <span class="fifth-color">"May 2024"</span>
+                                <br>
+
+                                <span class="second-color">self</span><span class="regular-color">.</span><span class="fourth-color">resume</span>
+                                <span class="third-color">=</span>
+                                <span class="second-color">Resume</span><span class="sixth-color">(</span><a class="fifth-color" href="assets/Dickerson_Sarah.pdf" target="_blank">Resume.pdf</a><span class="sixth-color">)</span>
+                                <br>
+                            </ul>
+                        </ul>
+                        <br>
+                        <ul>
+                            <span class="first-color">def</span>
+                            <span class="third-color">contact</span>
+                            <span class="sixth-color">(</span><span class="fourth-color">self</span><span class="sixth-color">)</span><span class="regular-color">:</span>
+                            <br>
+                            <ul>
+                                <span class="fourth-color">email</span>
+                                <span class="third-color">=</span>
+                                <span class="second-color">Email</span><span class="sixth-color">(</span><span class="fifth-color">"</span><a class="fifth-color" href="mailto:sarahdickerson@utexas.edu" target="_blank">sarahdickerson@utexas.edu</a><span class="fifth-color">"</span><span class="sixth-color">)</span>
+                                <br>
+
+                                <span class="fourth-color">links</span>
+                                <span class="third-color">=</span>
+                                <span class="sixth-color">[</span><span class="fifth-color">"</span><a class="fifth-color" href="https://www.linkedin.com/in/srdickerson" target="_blank">LinkedIn</a><span class="fifth-color">"</span><span class="regular-color">,</span><span class="fifth-color">"</span><a class="fifth-color" href="https://www.github.com/sarahrdickerson" target="_blank">GitHub</a><span class="fifth-color">"</span><span class="sixth-color">]</span>
+                            </ul>
+                        </ul>
+
+                    </div>
+                    <div>
+                        <img src="assets/me.jpg" alt="a picture of me!" class="portrait">
+                    </div>
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
