--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     </head>
 
     <body>
-        <div class="fullscreen-container home">
+        <div class="fullscreen-container" id="home">
             <h1>hi, my name is sarah!</h1>
+            <a href="#about" class="arrow bounce"></a>
         </div>
-        <div class="fullscreen-container">
+        <div class="fullscreen-container" id="about">
             <div class="container-column">
                 <h1>about me</h1>
 
